bk_ida/gccida/g1/fold_rtx
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3788:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3799:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3833:4: error: expected ';' after expression
rtx v57; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3833:5: error: use of undeclared identifier 'v57'
rtx v57; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3834:4: error: expected ';' after expression
rtx v58; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3834:5: error: use of undeclared identifier 'v58'
rtx v58; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3879:4: error: expected ';' after expression
rtx const_rtx; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3879:5: error: use of undeclared identifier 'const_rtx'
rtx const_rtx; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3883:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pool_mode; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3899:4: error: expected ';' after expression
rtx v123; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3899:5: error: use of undeclared identifier 'v123'
rtx v123; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3900:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v124; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3909:4: error: expected ';' after expression
rtx v134; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3909:5: error: use of undeclared identifier 'v134'
rtx v134; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3933:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v158; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3936:4: error: expected ';' after expression
rtx v161; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3936:5: error: use of undeclared identifier 'v161'
rtx v161; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3938:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v163; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/cse.c:3941:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v166; // r12d 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_rtx/src/obj/cse.o] Error 1
